[gd_scene load_steps=2 format=3 uid="uid://bsourh8co1vbn"]

[ext_resource type="Script" uid="uid://bfr61i4qrbw0t" path="res://scripts/ui/pause_menu.gd" id="1_6tw0m"]

[node name="PauseMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6tw0m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ContinueButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
text = "继续游戏"

[node name="RestartButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
text = "重新开始"

[node name="SaveButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
text = "保存游戏 (待实现)"

[node name="SettingsButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
text = "设置 (待实现)"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
text = "返回主界面"

[node name="RestartConfirmDialog" type="ConfirmationDialog" parent="CanvasLayer"]
title = "确认"
unresizable = true
borderless = true
ok_button_text = "确定"
dialog_text = "此操作将丢失当前游戏进度，确定要重新开始吗"
cancel_button_text = "取消"
